<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ExpenseHome">
<androidx.constraintlayout.widget.ConstraintLayout

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/edit_text_bkg"
    android:scrollbarAlwaysDrawHorizontalTrack="true"
    android:scrollbarAlwaysDrawVerticalTrack="true"
    >

    <ImageView
        android:id="@+id/black_bg"
        android:layout_width="375dp"
        android:layout_height="154dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="120dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/black_rounded_bg" />

    <ImageView
        android:id="@+id/blue_bg"
        android:layout_width="375dp"
        android:layout_height="109dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.571"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/blue_rounded_bg" />

    <TextView
        android:id="@+id/this_month_spending"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginBottom="8dp"
        android:text="@string/totSpendingView"
        android:textAlignment="center"
        android:textColor="@color/app_theam_light"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/totExpense"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/month"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="92dp"
        android:layout_marginBottom="8dp"
        android:text="@string/month"
        android:textColor="@color/app_theam_light"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/black_bg"
        app:layout_constraintStart_toEndOf="@id/this_month_spending" />

    <TextView
        android:id="@+id/totExpense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="35dp"
        android:text="Rs. 12,456.00"
        android:textAlignment="center"
        android:textColor="@color/app_theam_light"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/blue_bg"
        app:layout_constraintTop_toTopOf="@+id/blue_bg" />

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="8dp"
        android:text="@string/date"
        android:textColor="@color/app_theam_light"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/totExpense"
        app:layout_constraintTop_toBottomOf="@+id/month" />

    <ImageView
        android:id="@+id/backbtn"
        android:layout_width="31dp"
        android:layout_height="30dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="?attr/homeAsUpIndicator" />

    <ImageView
        android:id="@+id/addNewExpense"
        android:layout_width="68dp"
        android:layout_height="74dp"
        android:layout_marginStart="-240dp"
        android:layout_marginTop="52dp"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/blue_bg"
        app:srcCompat="@drawable/add_new" />

    <ImageView
        android:id="@+id/statitics"
        android:layout_width="41dp"
        android:layout_height="44dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="64dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/blue_bg"
        app:srcCompat="@drawable/blue_barchart" />

    <TextView
        android:id="@+id/viewHistory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="13dp"
        android:text="@string/history"
        android:textColor="@color/app_theam_light"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/blue_bg" />

    <TextView
        android:id="@+id/viewStats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="48dp"
        android:text="@string/Statitics"
        android:textColor="@color/app_theam_light"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/blue_bg" />

    <ImageView
        android:id="@+id/history"
        android:layout_width="51dp"
        android:layout_height="41dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/blue_bg"
        app:srcCompat="@drawable/blue_clock" />

    <ImageView
        android:id="@+id/notify_bell"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:layout_marginStart="300dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toEndOf="@+id/backbtn"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/notfy" />

    <TextView
        android:id="@+id/expenses"
        android:layout_width="122dp"
        android:layout_height="32dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="33dp"
        android:layout_marginEnd="245dp"
        android:text="Expenses"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.222"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/black_bg" />


    <SearchView
        android:id="@+id/searchExp"
        android:layout_width="302dp"
        android:layout_height="40dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="76dp"
        android:background="@drawable/white_circle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/expenses" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="387dp"
        android:layout_height="433dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:scrollbars="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchExp" />


</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
