<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OneExpense">

<androidx.constraintlayout.widget.ConstraintLayout 

    android:layout_width="match_parent"
    android:layout_height="match_parent"
>

    <TextView
        android:id="@+id/elect_bill"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="144dp"
        android:text="@string/electricty"
        android:textColor="@color/app_theam"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="284dp"
        android:layout_height="69dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="70dp"
        android:layout_marginBottom="32dp"
        android:background="@color/app_theam_light"
        android:backgroundTint="@color/edit_text_background"
        android:fadingEdge="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/elec_bill_icon"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/white_circle" />

    <ImageView
        android:id="@+id/notify_bell4"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/notfy" />

    <ImageView
        android:id="@+id/backbtn2"
        android:layout_width="31dp"
        android:layout_height="30dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="?attr/homeAsUpIndicator" />

    <ImageView
        android:id="@+id/elec_bill_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="180dp"
        android:layout_marginTop="92dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/elec_bill" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="396dp"
        android:layout_height="647dp"
        android:layout_marginTop="35dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView8"
        app:srcCompat="@drawable/white_rounded_bg" />

    <LinearLayout
        android:layout_width="378dp"
        android:layout_height="456dp"
        android:layout_marginTop="65dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView8">

        <TextView
            android:id="@+id/label4"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="          Name"
            android:textAlignment="textStart"
            android:textColor="@color/app_theam_light"
            android:textSize="20sp"
            android:textStyle="bold" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="103dp">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="284dp"
                android:layout_height="69dp"
                android:layout_marginBottom="16dp"
                android:background="@color/blue_light"
                android:backgroundTint="@color/blue_light"
                android:fadingEdge="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@drawable/white_circle" />

            <EditText
                android:id="@+id/edit_name"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginStart="24dp"
                android:layout_marginBottom="8dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/electricty"
                app:layout_constraintBottom_toBottomOf="@+id/imageView4"
                app:layout_constraintStart_toStartOf="@+id/imageView4" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/label5"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="          Date"
            android:textColor="@color/app_theam_light"
            android:textSize="20sp"
            android:textStyle="bold" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="103dp">

            <ImageView
                android:id="@+id/imageView13"
                android:layout_width="284dp"
                android:layout_height="69dp"
                android:layout_marginBottom="20dp"
                android:background="@color/blue_light"
                android:backgroundTint="@color/blue_light"
                android:fadingEdge="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@drawable/white_circle" />

            <EditText
                android:id="@+id/edit_date"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginStart="24dp"
                android:layout_marginBottom="4dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="2023/05/1"
                app:layout_constraintBottom_toBottomOf="@+id/imageView13"
                app:layout_constraintStart_toStartOf="@+id/imageView13" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/label6"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="         Category"
            android:textColor="@color/app_theam_light"
            android:textSize="20sp"
            android:textStyle="bold" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="103dp">

            <ImageView
                android:id="@+id/imageView14"
                android:layout_width="284dp"
                android:layout_height="69dp"
                android:layout_marginBottom="20dp"
                android:background="@color/blue_light"
                android:backgroundTint="@color/blue_light"
                android:fadingEdge="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@drawable/white_circle" />

            <Spinner
                android:id="@+id/edit_exp_cat"
                android:layout_width="191dp"
                android:layout_height="48dp"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/edit_text_bkg"
                android:entries="@array/expense_cat"
                android:popupBackground="@drawable/edit_text_bkg"
                app:layout_constraintBottom_toBottomOf="@+id/imageView14"
                app:layout_constraintStart_toStartOf="@+id/imageView14" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/exp_delete"
                android:layout_width="122dp"
                android:layout_height="55dp"
                android:layout_marginStart="40dp"
                android:layout_marginBottom="2dp"
                android:background="@drawable/white_rounded_bg"
                android:text="@string/exp_delete"
                android:textColor="@color/app_theam_light"
                android:textSize="18sp"
                android:textStyle="bold"
                app:backgroundTint="@color/purple"
                app:cornerRadius="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/exp_edit" />

            <Button
                android:id="@+id/exp_edit"
                android:layout_width="122dp"
                android:layout_height="55dp"
                android:layout_marginBottom="2dp"
                android:background="@drawable/white_circle"
                android:text="@string/exp_update"
                android:textColor="@color/blue_light"
                android:textSize="18sp"
                android:textStyle="bold"
                app:backgroundTint="@color/app_theam_light"
                app:cornerRadius="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/exp_delete"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

    <EditText
        android:id="@+id/edit_amount"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Rs.45,000.00"
        app:layout_constraintStart_toStartOf="@+id/imageView8"
        app:layout_constraintTop_toTopOf="@+id/imageView8" />

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>